更新 SM8750-BUILD.yml
直接发布release

--- a/.github/workflows/SM8750-BUILD.yml
+++ b/.github/workflows/SM8750-BUILD.yml
@@ -1,4 +1,4 @@
-name: OnePlus SM8750 Build SuKiSu SUSFS
+name: Build SuKiSu
 on:
   workflow_dispatch:
     inputs:
@@ -191,17 +191,17 @@ jobs:
          rm -rf ./AnyKernel3/LICENSE
          cp kernel_workspace/kernel_platform/dist/Image ./AnyKernel3/
 
-      - name: Upload AnyKernel3
-        uses: actions/upload-artifact@v4
-        with:
-         name: SuKiSu_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
-         path: ./AnyKernel3/*
+    #  - name: Upload AnyKernel3
+    #    uses: actions/upload-artifact@v4
+    #    with:
+    #     name: SuKiSu_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+    #     path: ./AnyKernel3/*
 
-      - name: Upload Image
-        uses: actions/upload-artifact@v4
-        with:
-         name: Image_SuKiSu_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
-         path: kernel_workspace/kernel_platform/dist/Image
+    #  - name: Upload Image
+    #    uses: actions/upload-artifact@v4
+    #    with:
+    #     name: Image_SuKiSu_${{ env.KSUVER }}_${{ github.event.inputs.FEIL }}
+    #     path: kernel_workspace/kernel_platform/dist/Image
 
       - name: Zip AnyKernel3
         run: |
